--- a/RESTfulAPI/src/main/resources/application.properties
+++ b/RESTfulAPI/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-secret_key=lilyshop
+jwtSecret=lilyshop
+jwtExpirationMs= 86400000
