--- a/RESTfulAPI/pom.xml
+++ b/RESTfulAPI/pom.xml
@@ -55,7 +55,12 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
