--- a/RESTfulAPI/src/main/resources/application.properties
+++ b/RESTfulAPI/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 jwtSecret=lilyshop
 jwtExpirationMs= 86400000
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
